<resources>
    <string name="biometric_failed">Fingerprint not recognized</string>
    <string name="app_name">PetPlanet</string>
    <string name="title_activity_landing_pet_owner">LandingPetOwnerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_landing_pet_walker">LandingPetWalkerActivity</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="companyname">PetCoding</string>
    <string name="loginwelcome">!Bienvenido de nuevo!</string>
    <string name="olvidarcontra">Olvidaste tu contraseña?</string>
    <string name="eresnuevo">¿Eres nuevo?</string>
    <string name="registrarse">Regístrate aqui</string>
    <string name="cuenta">¿Ya tienes cuenta?</string>
    <string name="iniciar">Ingresa con tu email</string>
    <string name="crea">Crea tu cuenta!</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="olvidastetucontra">Ups!! olvidaste tu contraseña?</string>
    <string name="enviacorreo">Introduce tu correo y te enviamos un link para restablecer la contraseña</string>
    <string name="enviar">Enviar Link</string>
    <string name="petowner">PetOwner</string>
    <string name="petwalker">PetWalker</string>
    <string name="registropet">Registrar Mascota</string>


    // Perfiles
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="number">Phone Number</string>
    <string name="cambiarcontrasenia">Cambiar Contraseña</string>
    <string name="mascotas">Mascotas</string>
    <string name="deseascambiartupass">Deseas cambiar tu contraseña?</string>
    <string name="nombrePerro">Pet Name, age</string>
    <string name="carnetvacunacion">Carnet de Vacunacion</string>
    <string name="raza">Raza</string>
    <string name="address">Address</string>
    <string name="indicaciones">Indicaciones y Recomendaciones</string>
    <string name="sexo">Sexo</string>
    <string name="carnet">Carnet de Vacunación</string>
    <string name="esterilizado">Esterilizado</string>
    <string name="fechapet">Ingrese la fecha de Nacimiento</string>
    <string name="nombredelperro">Nombre del perro:</string>
    <string name="nombredeldueno">Nombre del dueño:</string>
    <string name="horario">Horario:</string>
    <string name="listar">Listar paseos</string>
    <string name="seleccion_de_cuenta">Selecciona el tipo de cuenta</string>

    <string name="perfil">Perfil</string>
    <string name="cuidadores">Cuidadores</string>
    <string name="agendarpaseos">Agendar Paseos</string>
    <string name="mapa">Mapa</string>
    <string name="enviarmens">Enviar mensaje</string>
    <string name="disponibles">Perros disponibles</string>

    <string name="Ingresefecha">Ingrese la fecha del paseo</string>
    <string name="Ingresehora">Ingrese la hora del paseo</string>


    //Registro Pet
    <string name="registroPerro">Cuentanos acerca de tu peludo!</string>
    <string-array name="razas">
        <item>Selecciona una raza</item>
        <item>Golden Retriever</item>
        <item>Yorkshire Terrier</item>
        <item>Bulldog</item>
        <item>Pastor Alemán</item>
        <item>Labrador</item>
        <item>Poodle</item>
        <item>Husky Siberiano</item>
        <item>Bulldog Francés</item>
        <item>Pomerania</item>
        <item>Airedale Terrier</item>
        <item>Pug</item>
        <item>Gran Dánes</item>
        <item>Afgano</item>
        <item>Chihuahua</item>
        <item>Boxer</item>
        <item>Doberman</item>
        <item>Esquimal Americano</item>
        <item>Border Collie</item>
        <item>Pastor Ovejero</item>
        <item>Bichon Frisé</item>
        <item>Chow Chow</item>
        <item>Dalmata</item>
    </string-array>

    <string-array name="colores">
        <item>Selecciona un color</item>
        <item>Blanco</item>
        <item>Negro</item>
        <item>Manchado</item>
        <item>Cafe</item>
        <item>Marrón</item>
        <item>Chocolate</item>
        <item>Atigrados</item>
        <item>Arlequín</item>
        <item>Albino</item>

    </string-array>

    <string-array name="sexo">
        <item>Seleccione el sexo</item>
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>

    //registro pet owner
    <string name="nombcompl">Nombre completo</string>
    <string name="direccion">Dirección</string>

    //registro pet walker
    <string name="vamos">Vamos a crecer juntos</string>
    <string name="documento">Documento de identidad</string>
    <string name="experiencia">Cuentanos tu experiencia con mascotas</string>
    <string name="hoja">Hoja de vida</string>
    <string name="enviarsolicitud">Envia Solicitud</string>
    <string name="solicitudenviada">Solicitud enviada</string>
    <string name="subir">Subir</string>

    <string-array name="localidades">
        <item>Selecciona una localidad</item>
        <item>Usaquén</item>
        <item>Chapinero</item>
        <item>Santa Fe</item>
        <item>San Cristobal</item>
        <item>Usme</item>
        <item>Tunjuelito</item>
        <item>Bosa</item>
        <item>Kennedy</item>
        <item>Fontibón</item>
        <item>Engativá</item>
        <item>Suba</item>
        <item>Barrios Unidos</item>
        <item>Teusaquillo</item>
        <item>Los Mártires</item>
        <item>Antonio Nariño</item>
        <item>Puente Aranda</item>
        <item>La candelaria</item>
        <item>Rafael Uribe Uribe</item>
        <item>Ciudad Bolívar</item>
        <item>Sumapaz</item>

    </string-array>


    <string-array name="mascotas">
        <item>Selecciona una mascota</item>
        <item>daiki</item>
        <item>puffy</item>
        <item>tommy</item>
        <item>manchas</item>
        <item>pelusa</item>

    </string-array>


    <string-array name="horas">
        <item>Hora</item>
        <item>6:00am</item>
        <item>7:00am</item>
        <item>8:00am</item>
        <item>9:00am</item>
        <item>10:00am</item>

    </string-array>

    <string-array name="Paseadores">
        <item>Seleccione el paseador</item>
        <item>Juan Pablo Sanchez</item>
        <item>Daniel Castellanos</item>
        <item>Tatiana peña</item>
        <item>Karol Ceballos</item>
        <item>Laura Sanchez</item>

    </string-array>
    <string name="registratuperro">Crea una cuenta a tu perro</string>
    <string name="listarcuidadores">Lista de cuidadores</string>
    <string name="favoritos">Agregar a favoritos</string>
    <string name="perfilPet">Perfil del cuidador</string>
    <string name="chat">Chat</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="agendar_paseo">Agendar Paseo</string>
    <string name="iniciar_paseo">Iniciar Paseo</string>
    <string name="seleccionauncuidador">Selecciona a una persona</string>
    <string name="nombredelcuidador">Nombre</string>
    <string name="telefonodelcuidador">Telefono</string>
    <string name="expericenciaconlosperros">Expericencia</string>
    <string name="escojeraza">Escoge la raza de tu perro</string>
    <string name="seguir_con_el_registro">Seguir con el registro</string>
    <string name="tusPerrosestanaca">Tus perros estan aca</string>
    <string name="cerrar_sesion">cerrar sesión</string>
    <string name="seguir_conelregistro">Seguir con el registro</string>
    <string name="introduce_tu_nueva_contrase_a">Introduce tu nueva contraseña</string>
    <string name="introduce_tu_contrase_a_actual">Introduce tu contraseña actual</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="huellatext">Iniciar Sesión con Huella</string>

</resources>