<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".activities.PerfilUsuarioActivity">

    <Button
        android:id="@+id/changepasswordBTN"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"

        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"


        android:padding="10dp"
        android:text="@string/cambiarcontrasenia"

        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPetOwner"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/profilePetPicture"
        android:layout_width="200dp"
        android:layout_height="206dp"
        android:layout_gravity="center"
        android:layout_marginStart="92dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPusuario"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/petPicture"
        android:layout_width="120dp"
        android:layout_height="111dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="47dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mascotas"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@mipmap/pet1_foreground" />

    <TextView
        android:id="@+id/fullNamePet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/firstname"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/profilePetPicture"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/direccionUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/direccion"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNamePet" />

    <TextView
        android:id="@+id/raza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="27dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/direccionUsuario"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/numberPetOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/number"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/raza"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/mascotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/mascotas"
        android:textAlignment="center"
        android:textColor="@color/grey_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/changepasswordBTN"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="58dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/petPicture"
        app:layout_constraintTop_toBottomOf="@+id/mascotas"

        app:srcCompat="@drawable/ic_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fingerBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        app:cornerRadius="15dp"
        android:text="Añadir huella"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/changepasswordBTN"
        app:layout_constraintTop_toBottomOf="@+id/numberPetOwner" />


</androidx.constraintlayout.widget.ConstraintLayout>