<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/contrasena"
        android:textColorHint="@color/grey_200"
        android:visibility="gone"

        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/olvidocontra"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayoutCorreo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:maxLength="255"
        android:textColorHint="@color/grey_200"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        tools:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:maxLength="255"
            android:textColor="@color/black"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"


        android:padding="10dp"
        android:text="@string/iniciarsesion"
        android:textColor="#000000"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/registrarselayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/olvidocontra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"

        android:layout_marginEnd="20dp"
        android:layout_marginBottom="29dp"
        android:clickable="true"
        android:text="@string/olvidarcontra"
        android:textColor="@color/purple_500"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBTN"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/bienvenidotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="189dp"
        android:text="@string/loginwelcome"
        android:textColor="@color/purple_500"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayoutCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/registrarselayout"
        android:layout_width="420dp"
        android:layout_height="315dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="93dp"
            android:layout_height="29dp"
            android:layout_marginStart="115dp"
            android:layout_marginBottom="312dp"
            android:text="@string/eresnuevo"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/nuevousuario"
            android:layout_width="132dp"
            android:layout_height="32dp"
            android:layout_marginEnd="106dp"
            android:layout_marginBottom="311dp"
            android:text="@string/registrarse"
            android:textColor="@color/purple_500"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>