<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PerfilUsuarioWalkerActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/FotoPetWalker"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:clickable="true"


        app:civ_border_color="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tollbarPwalker"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tollbarPwalker"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/perfilPet"
        app:titleTextColor="@color/purple_500" />

    <TextView
        android:id="@+id/nombrePetWalker"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_gravity="bottom|center_horizontal"

        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"

        android:layout_marginEnd="20dp"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/FotoPetWalker"
        app:layout_constraintTop_toBottomOf="@+id/tollbarPwalker" />

    <TextView
        android:id="@+id/TelefonoPetwalker"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center_horizontal"

        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"

        android:layout_marginEnd="20dp"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/FotoPetWalker"
        app:layout_constraintTop_toBottomOf="@+id/nombrePetWalker" />

    <TextView
        android:id="@+id/experienciaPetwalker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edittext"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TelefonoPetwalker" />

    <Button
        android:id="@+id/agregarFaboritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/favoritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experienciaPetwalker" />

    <TextView
        android:id="@+id/nombreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/nombredelcuidador"
        app:layout_constraintStart_toEndOf="@+id/FotoPetWalker"
        app:layout_constraintTop_toBottomOf="@+id/tollbarPwalker" />

    <TextView
        android:id="@+id/telefonovieww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/telefonodelcuidador"
        app:layout_constraintStart_toEndOf="@+id/FotoPetWalker"
        app:layout_constraintTop_toBottomOf="@+id/nombrePetWalker" />

    <TextView
        android:id="@+id/experienciaview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/expericenciaconlosperros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TelefonoPetwalker" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="440dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>